--- a/app/views/task_lists/_header.haml
+++ b/app/views/task_lists/_header.haml
@@ -1,4 +1,5 @@
 .task_header{ :id => "#{task_list_id(:edit_header,project,task_list)}" }
   = task_list_action_links(project,task_list)
   %h2
+    =show_comments_count(task_list)
     = task_list.name
