--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -1,3 +1,4 @@
 .task_list{ :id => task_list_id(:item,project,task_list), :class => "task_list_#{task_list.id} #{ 'active_task_list' if current_target == task_list }" }
   = task_list_drag_link(task_list)
+  = show_comments_count(task_list)
   = the_task_list_link(task_list)
