--- a/app/views/tasks/show.haml
+++ b/app/views/tasks/show.haml
@@ -7,4 +7,4 @@
       its not possible to edit or comment on it.
     =link_to '&larr; Back to All Archived Tasks', archived_project_task_lists_path(@current_project)
     
-= render_task(@current_project,@task_list,@task)
+= render_task(@current_project,@task_list,@task,@comment)
