--- a/app/views/task_lists/_archived_task_list_with_tasks.haml
+++ b/app/views/task_lists/_archived_task_list_with_tasks.haml
@@ -1,6 +1,8 @@
-.task_list_wrap{ :id => "#{task_list_id(:with_archived_tasks,project,task_list)}" }
-  .task_list
-    = show_comments_count(task_list)
-    = the_task_list_link(task_list)
-  .tasks{ :id => task_list_id(:the_tasks,project,task_list) }
-    = list_tasks(task_list.project,task_list,task_list.tasks.archived)
+%table.task_list{ :id => task_list_id(:with_archived_tasks,project,task_list) }
+  %thead
+    %tr
+      %th{:colspan => 4}
+        =show_comments_count(task_list)
+        = the_task_list_link(task_list)
+  %tbody{ :id => task_list_id(:the_archived_tasks,project,task_list) }
+    = list_tabular_tasks(project,task_list,task_list.tasks.archived)
