--- a/app/views/task_lists/_main_task_lists.haml
+++ b/app/views/task_lists/_main_task_lists.haml
@@ -1,6 +1,8 @@
-.task_list_wrap{ :id => "main_task_list_#{task_list.id}" }
-  .task_list
-    = show_comments_count(task_list)
-    = the_task_list_link(task_list)
-  .tasks{ :id => "project_#{task_list.project.id}_task_list_#{task_list.id}" }
-    = list_tasks(task_list.project,task_list,task_list.tasks,current_target)
+%table.task_list{ :id => task_list_id(:with_main_tasks,project,task_list) }
+  %thead
+    %tr
+      %th{:colspan => 4}
+        =show_comments_count(task_list)
+        = the_task_list_link(task_list)
+  %tbody{ :id => task_list_id(:the_main_tasks,project,task_list) }
+    = list_tabular_tasks(project,task_list,task_list.tasks.unarchived)
