--- a/app/views/task_lists/_show.haml
+++ b/app/views/task_lists/_show.haml
@@ -1,7 +1,7 @@
 #show_task_list
   =task_list_header(project,task_list)
   =task_list_form(project,task_list)
-  = new_comment_form(project, :target => task_list)
+  = new_comment_form(project,project.comments.new, :target => task_list)
 
   #comments
     = list_comments(task_list.comments,task_list)
