--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -139,31 +139,14 @@ form.edit_comment
       :border-bottom solid 1px rgb(200,200,200)
     .date
       :color rgb(0,0,0)
-      
-      
-      
-span.count
+
+span.comments_count
+  :text-align center
+  :color rgb(100,100,100)
+  :padding 1px 5px
+  :margin-right 5px
+  :font-size 10px
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
-  :background rgb(160,160,160)
-  :color rgb(255,255,255)    
-  :text-align center
-  :font-size 9px    
-  :line-height 1em
-  :padding 1px 0px
-  :margin-right 4px
-  span.total   
-    :padding 1px 4px
-      :right 2px
-  span.unread
-    :padding 1px 4px
-      :right 2px
-    :background rgb(30,30,255)
-    :color rgb(255,255,255)
-    :-moz-border-radius 4px
-    :-webkit-border-radius 4px
-
-span.unread_comments
-  :color blue
-span.no_unread_comments
-  :color rgb(230,230,230)
+  :background rgb(245,245,245)
+  :border solid 1px rgb(225,225,225)
