--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -131,7 +131,7 @@ a.new_task_link
     :color rgb(180,180,180)
         
 span.task_status
-  :padding 0px 5px
+  :padding 1px 5px
   :text-transform uppercase
   :color rgb(255,255,255)
   :font-size 11px
@@ -147,20 +147,6 @@ span.task_status_resolved
   :background rgb(0,200,0)
 span.task_status_rejected
   :background rgb(200,0,0)
-
-.task
-  img
-    :display inline
-  span.task_status_new
-    :background rgb(200,200,200)
-  span.task_status_open
-    :background rgb(100,100,200)
-  span.task_status_hold
-    :background rgb(200,200,100)
-  span.task_status_resolved
-    :background rgb(0,200,0)
-  span.task_status_rejected
-    :background rgb(200,0,0)
     
 .tasks
   :border-top solid 1px rgb(210,210,210)    
@@ -188,3 +174,47 @@ a.archived_task_list_link
   .column
     p
       :font-size 12px
+      
+table.task_list
+  :width 100%
+  :margin-bottom 10px
+  th
+    :font-size 14px
+    :border-bottom solid 1px rgb(200,200,200)
+    :padding-bottom 5px
+  td.status
+    :text-align right
+    :width 100px
+  td
+    :padding 4px 5px
+    :border-bottom solid 1px rgb(240,240,240)
+    span.task_status
+      :font-size 11px
+      :padding 1px 5px
+  .comments_count
+    :width 1%
+    :text-align right
+  tbody
+    th
+      :font-size 11px
+      :background rgb(200,200,200)
+      :color rgb(100,100,100)
+      :padding 2px 5px
+      :border-right solid 1px rgb(150,150,150)
+      :border-top solid 1px rgb(100,100,100)
+    td.name
+      span
+        :color rgb(100,100,100)
+        :padding 1px 5px
+        :margin-right 5px
+        :font-size 11px
+        :-moz-border-radius 4px
+        :-webkit-border-radius 4px
+        :background rgb(245,245,245)
+        :border solid 1px rgb(225,225,225)        
+        :text-transform uppercase
+        a
+          :color rgb(100,100,100)
+        a:hover
+          :text-decoration none
+          :color rgb(0,0,0)
