--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -42,6 +42,8 @@
   :background rgb(250,250,250)
   :border solid 1px rgb(230,230,230)
   :padding 10px
+    :left 5px
+  :margin-bottom 5px
   :color rgb(160,160,160)
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
