--- a/app/views/task_lists/_show.haml
+++ b/app/views/task_lists/_show.haml
@@ -1,11 +1,8 @@
 #show_task_list
   =task_list_header(project,task_list)
+  = people_watching(project,current_user,task_list)
   =task_list_form(project,task_list)
   = new_comment_form(project,project.comments.new, :target => task_list)
 
   #comments
     = list_comments(task_list.comments,task_list)
-  
-  = people_watching(task_list)
-  #watch_link
-    = watch_task_list_link(current_user,task_list)
