Adding support link and help links to Tender

--- a/public/stylesheets/sass/footer.sass
+++ b/public/stylesheets/sass/footer.sass
@@ -1,6 +1,8 @@
 div.footer
   :clear both
-  :padding-top 5px
+  :padding
+    :top 5px
+    :bottom 30px
   :color rgb(140,140,140)
   :font-size 12px
   p
@@ -8,6 +10,7 @@ div.footer
   a
     :color rgb(140,140,140)
     :font-size 12px
+    :padding-left 20px
   img
     :vertical-align bottom
   span
