--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -31,6 +31,7 @@ e:compact
 @import cards.sass
 @import sessions.sass
 @import calendars.sass
+@import textilized.sass
 
 @import weakling.sass
 @import fyi.sass
