--- a/app/views/tasks/_header.haml
+++ b/app/views/tasks/_header.haml
@@ -1,8 +1,6 @@
 .task_header{ :id => "#{task_id(:edit_header,project,task_list,task)}" }
   = task_action_links(project,task_list,task) unless task.archived
   %h2
-    = task_status(task,true)
+    = task_status(task,:header)
     = task.name
-  .assignment
-    - if task.assigned?(current_user)
-      = t('.assigned_to', :user => link_to(task.assigned.user.name, user_path(current_user)))
+  = render_assignment(task,current_user)
