--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -1,5 +1,5 @@
 .task{ :id => task_id(:item,project,task_list,task), :class => "#{ 'active_task' if current_target == task } task_item" }
-  = task_status(task,false)
+  = task_status(task,:column)
   = task_drag_link(task)
   = link_to task.name, project_task_list_task_path(project,task_list,task)
 .clear
