--- a/app/views/tasks/show.haml
+++ b/app/views/tasks/show.haml
@@ -1,10 +1,4 @@
 -content_for :column do
-  -unless @task.archived
-    = task_list_column(@current_project,@task_lists,@task)
-  -else
-    %p
-      This task is currently archived meaning
-      its not possible to edit or comment on it.
-    =link_to '&larr; Back to All Archived Tasks', archived_project_task_lists_path(@current_project)
+  = task_list_column(@current_project,@task_lists,@sub_action,@task)
     
 = render_task(@current_project,@task_list,@task,@comment)
