Fixing margin-bottom for form#new_comment, adding pre to textilized text

--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -1,5 +1,6 @@
 form#new_comment
   :padding-bottom 3px
+  :margin-bottom 30px
   :border-bottom solid 1px rgb(220,220,220)
   .body
     :margin-bottom 5px  
