--- a/public/stylesheets/sass/textilized.sass
+++ b/public/stylesheets/sass/textilized.sass
@@ -16,3 +16,19 @@
     :margin 2px 0 10px
   a
     :text-decoration underline
+  pre, code
+    :-moz-background-clip border
+    :-moz-background-inline-policy continuous
+    :-moz-background-origin padding
+    :background #F9F9F9 none repeat scroll 0 0
+    :border-color #CCCCCC
+    :border-style solid
+    :border-width 1px 0
+    :font-family monospace
+    :font-size 12px
+    :margin 0
+      :top 10px
+      :bottom 10px
+    :overflow auto
+    :padding 5px 10px
+    :width 540px
