styling to show overdue dates, cleaned up tasks sass files

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -13,7 +13,12 @@ e:compact
 @import activities.sass
 @import comments.sass
 @import conversations.sass
-@import tasks.sass
+
+@import tasks/default.sass
+@import tasks/form.sass
+@import tasks/header.sass
+@import tasks/index.sass
+@import tasks/item.sass
 
 @import pages.sass
 @import pages/notes.sass
