--- a/app/views/tasks/_header.haml
+++ b/app/views/tasks/_header.haml
@@ -3,4 +3,5 @@
   %h2
     = task_status(task,:header)
     = task.name
+  = render_due_on(task,current_user)
   = render_assignment(task,current_user)
