--- a/app/views/tasks/_td_task.haml
+++ b/app/views/tasks/_td_task.haml
@@ -1,11 +1,12 @@
-%tr
+%tr{ :class => "#{'overdue' if task.overdue? && task.open? }"}
   %td.status
     = task_status(task,:content)
   %td.name
     = link_to task.name, project_task_list_task_path(project,task_list,task)
-    - unless task.assigned.nil? && task.due_on.nil?
+    - unless (task.due_on.nil? && task.unassigned?) || task.closed?
       %span.assigned
-        = task.due_on.strftime('%b %d') unless task.due_on.nil?
+        - unless task.due_on.nil?
+          = task.overdue? ? t('tasks.overdue', :days => task.overdue) : task.due_on.strftime('%b %d')
         -unless sub_action == 'mine'
           = "-" unless task.assigned.nil? || task.due_on.nil?
           = link_to task.assigned.name, user_path(task.assigned) unless task.assigned.nil?
