won't show all countries when no country is select for a card address

--- a/app/views/cards/_card.haml
+++ b/app/views/cards/_card.haml
@@ -30,7 +30,7 @@
           %br/
           = "#{address.city} #{address.state}, #{address.zip}"
           %br/          
-          = t("countries.#{address.country}")
+          = t("countries.#{address.country}") unless address.country.nil?
   -unless card.ims.empty?
     .ims
       %h3= t('.ims')
