highlight my tasks when they are open and assigned to me

--- a/public/stylesheets/sass/tasks/index.sass
+++ b/public/stylesheets/sass/tasks/index.sass
@@ -41,6 +41,21 @@ table.task_list
         a:hover
           :text-decoration none
           :color rgb(0,0,0)
+    tr.mine
+      td
+        :background rgb(240,240,255)
+        :border-bottom solid 1px rgb(230,230,240)
+      td.name
+        a
+          :font-weight bold
+        span
+          :background rgb(255,255,255)
+          :border solid 1px rgb(200,200,240)
+          :color rgb(0,0,200)
+          :font-weight bold
+          a
+            :color rgb(0,0,200)
+            :font-weight normal
     tr.overdue
       td
         :background rgb(255,240,240)
