--- a/public/stylesheets/tasks/index.css
+++ b/public/stylesheets/tasks/index.css
@@ -39,6 +39,19 @@ table.task_list {
     table.task_list tbody td.name span a:hover {
       text-decoration: none;
       color: rgb(0,0,0); }
+  table.task_list tbody tr.mine td {
+    background: rgb(240,240,255);
+    border-bottom: solid 1px rgb(230,230,240); }
+  table.task_list tbody tr.mine td.name a {
+    font-weight: bold; }
+  table.task_list tbody tr.mine td.name span {
+    background: rgb(255,255,255);
+    border: solid 1px rgb(200,200,240);
+    color: rgb(0,0,200);
+    font-weight: bold; }
+    table.task_list tbody tr.mine td.name span a {
+      color: rgb(0,0,200);
+      font-weight: normal; }
   table.task_list tbody tr.overdue td {
     background: rgb(255,240,240);
     border-bottom: solid 1px rgb(240,230,230); }
