cleaned up conversations sass, added ajax edit form for conversations, cleaned up updating comments count

--- a/app/views/task_lists/_main_task_lists.haml
+++ b/app/views/task_lists/_main_task_lists.haml
@@ -3,7 +3,7 @@
   %thead
     %tr
       %th{:colspan => 4}
-        =show_comments_count(task_list)
+        =comments_count(task_list,:content)
         = the_task_list_link(task_list)
   %tbody{ :id => task_list_id(:the_main_tasks,project,task_list) }
     = list_tabular_tasks(project,task_list,tasks,sub_action)
