--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3,6 +3,7 @@ e:compact
 @import header.sass
 @import navigation.sass
 @import wrapper.sass 
+@import column.sass
 @import footer.sass
 @import forms.sass
 @import flash_box.sass
@@ -12,7 +13,10 @@ e:compact
 @import projects.sass
 @import activities.sass
 @import comments.sass
+
 @import conversations.sass
+@import conversations/form.sass
+@import conversations/header.sass
 
 @import tasks/default.sass
 @import tasks/form.sass
