--- a/app/views/task_lists/_archived_task_list_with_tasks.haml
+++ b/app/views/task_lists/_archived_task_list_with_tasks.haml
@@ -2,7 +2,7 @@
   %thead
     %tr
       %th{:colspan => 4}
-        =show_comments_count(task_list)
+        =comments_count(task_list,:content)
         = the_task_list_link(task_list)
   %tbody{ :id => task_list_id(:the_archived_tasks,project,task_list) }
     = list_tabular_tasks(project,task_list,task_list.tasks.archived)
