--- a/public/stylesheets/sass/column.sass
+++ b/public/stylesheets/sass/column.sass
@@ -20,5 +20,11 @@ div.column_wrap
     div.active
       :-moz-border-radius 5px
       :-webkit-border-radius 5px
-      :background rgb(255,255,0)
-      :border solid 1px rgb(200,200,0)
+      :background rgb(50,50,250)
+      :padding 3px
+      a
+        :color rgb(255,255,255)
+      .task_status
+        :background rgb(150,150,250)
+        :color rgb(50,50,250)
+        :font-weight bold
