--- a/app/views/comments/_comment_count.haml
+++ b/app/views/comments/_comment_count.haml
@@ -1,2 +1,1 @@
-%span{ :id => id, :class => 'comments_count' }
-  =status_type == :column ? target.comments_count : count = pluralize(target.comments_count,'Comment')
+%span{ :id => id, :class => 'comments_count' }= status_type == :column ? target.comments_count : count = pluralize(target.comments_count,'Comment')
