--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -174,12 +174,10 @@ form.edit_comment
       :color rgb(0,0,0)
 
 span.comments_count
-  :text-align center
-  :color rgb(100,100,100)
   :padding 1px 5px
-  :margin-right 5px
-  :font-size 10px
+  :text-transform uppercase
+  :font-size 11px
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
-  :background rgb(245,245,245)
-  :border solid 1px rgb(225,225,225)
+  :color rgb(255,255,255)
+  :background rgb(170,170,170)
