--- a/public/stylesheets/tasks/default.css
+++ b/public/stylesheets/tasks/default.css
@@ -8,9 +8,18 @@ div#sortable_task_lists {
   margin: 10px 0px; }
 
 a.new_task_link {
+  display: block;
+  background: rgb(240,240,240);
   font-size: 12px;
-  margin-left: 4px;
-  color: rgb(120,120,120); }
+  color: rgb(120,120,120);
+  padding: 4px;
+  padding-top: 0px;
+  border: solid 1px rgb(210,210,210);
+  border-top: none;
+  -moz-border-radius-bottomleft: 5px;
+  -moz-border-radius-bottomright: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  -webkit-border-bottom-right-radius: 5px; }
 
 span.task_status {
   padding: 1px 5px;
