--- a/public/stylesheets/sass/tasks/default.sass
+++ b/public/stylesheets/sass/tasks/default.sass
@@ -8,10 +8,20 @@ div#sortable_task_lists
   :margin 10px 0px
       
 a.new_task_link
+  :display block
+  :background rgb(240,240,240)
   :font-size 12px
-  :margin-left 4px
   :color rgb(120,120,120)
-
+  :padding 4px
+    :top 0px
+  :border solid 1px rgb(210,210,210)
+    :top none
+  :-moz-border-radius
+    :bottomleft 5px
+    :bottomright 5px
+  :-webkit-border-bottom-left-radius 5px
+  :-webkit-border-bottom-right-radius 5px
+  
 span.task_status
   :padding 1px 5px
   :text-transform uppercase
