--- a/public/stylesheets/sass/invitations.sass
+++ b/public/stylesheets/sass/invitations.sass
@@ -16,3 +16,11 @@
       :margin-bottom 15px
     form.accept_project, form.decline_project, span
       :display inline
+
+.new_invitation
+  .text_field
+    :width 300px
+    input
+      :width 100%
+  .submit
+    :width 120px
