--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -1,4 +1,6 @@
 .index_people
+  .content
+    :padding 5px
   form
     :font-size 12px
     :border 1px rgb(220,220,220) solid
@@ -7,21 +9,22 @@
     :margin-bottom 10px
     h2
       :font-size 14px
-      :margin 0
-      :padding 0
+      :margin 0px
+      :padding 0px
   .people
     .person
       :clear both
       :display block
       :font-size 12px
-      :border 0px rgb(200,200,200) dashed
+      :border-bottom 1px solid rgb(240,240,240)
       :padding 5px
-        :bottom 18px
       :margin-bottom 5px
       :color rgb(80,80,80)
       .thumb_avatar
         :display block
-        :margin-right 20px
+        :margin
+          :right 20px
+          :bottom 5px
         :float left
       .actions
         :float right
