Text explaining what happens when you start watching or unwatching a target

--- a/app/views/shared/_watchers.haml
+++ b/app/views/shared/_watchers.haml
@@ -1,7 +1,13 @@
 .watching#watching
-  =watch_link(project,user,target)
-  -if target.watchers.empty?
-    =t('.nobody_watching')
-  -else
-    =t('.people_watching')
-    =target.watchers.join(", ")
+  = watch_link(project,user,target)
+  - if target.watchers.empty?
+    = t('.nobody_watching')
+  - else
+    = t('.people_watching')
+    = target.watchers.join(", ")
+  - case state
+    - when :started_watching
+      %span.state.started= t('.started_watching')
+    - when :stopped_watching
+      %span.state.stopped= t('.stopped_watching')
+      
