--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -48,3 +48,10 @@
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
   :font-size 12px
+  .state
+    :font-weight bold
+    &.started
+      :color rgb(50,120,50)
+    &.stopped
+      :color rgb(120,50,50)
+    
