--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -12,6 +12,10 @@
 
 
   .show_projects, .index_task_lists
+    .project_name
+      :font-weight bold
+      :font-variant small-caps
+      :font-size 14px
     #activities
       .comment
         .name
