--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -27,10 +27,12 @@
       :background url(../images/loading_button_wrap_bg.jpg) no-repeat right
       
   a.add_button, a.new_task_list_link, a.reorder_task_list_link
+    :display block
     :background url(../images/add_button_bg.jpg) no-repeat left
     :font-size 12px
     :padding 5px
       :left 20px
+    :margin-bottom 15px      
     span
       :color rgb(40,40,40)
       :padding 5px
