--- a/app/views/people/index.haml
+++ b/app/views/people/index.haml
@@ -1,5 +1,5 @@
 = invite_form(@current_project,Invitation.new)
 
 .people
-  = list_people(@current_project.people)
+  = list_people(@current_project,@people)
   = list_invitations(@current_project.invitations)
