--- a/app/views/tasks/_show.haml
+++ b/app/views/tasks/_show.haml
@@ -1,6 +1,6 @@
 #show_task
   = task_header(project,task_list,task)
-  -unless task.closed?
+  -unless task.closed? || task.observer?(current_user)
     = task_form(project,task_list,task)
     = people_watching(project,current_user,task) unless task.archived
     = new_comment_form(project,comment, :target => task)
