--- a/public/stylesheets/sass/tasks/item.sass
+++ b/public/stylesheets/sass/tasks/item.sass
@@ -14,6 +14,10 @@ div.task_list_wrap
       :background rgb(240,240,240)
       :padding 0px 3px
         :bottom 2px
+    .read_only    
+      :-moz-border-radius 5px
+      :-webkit-border-radius 5px
+      :border solid 1px rgb(210,210,210)      
   .task_form
     :-moz-border-radius
       :topleft 0px
