--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -50,12 +50,14 @@
         :padding 5px 8px
         :margin-right 1px
         :font-size 15px
+        +round_corners
       a:hover
-        :text-decoration underline
+        :color rgb(48,48,48)
+        :background rgb(160,228,237)
       a.active
         :color rgb(48,48,48)
         :background rgb(160,228,237)
-        +round_corners
+
     li.welcome, li.new
       a.active
         :background rgb(255,255,255)
