basic styling of gannt chart

--- a/public/stylesheets/sass/gantt_chart.sass
+++ b/public/stylesheets/sass/gantt_chart.sass
@@ -2,36 +2,42 @@
   .row 
     :position relative
     :display block
-    :margin-bottom 2px
+    :margin-bottom 1px
     :font-size 12px
-    :height 1.6em
+    :height 19px
   .task
+    :height 13px
     :font-size 11px
     :position absolute
-    :background rgb(231,219,28)
+    :background rgb(200,200,200)
     :white-space nowrap
     :overflow hidden
-    :padding 2px 0px
+    :padding 3px 0px
     :text-indent .4em
 .rcont 
   :display block
 .ruler 
   :position relative 
   :display block
-  :height 30px
+  :height 26px
+  :background rgb(210,210,210)
+  :border-bottom solid 1px rgb(190,190,190)
+  :color rgb(255,255,255)
   .mark 
     :position absolute
     :font-size 10px
-    :color rgb(0,0,0)
-    :top 15px
+    :top 18px
     :height 10px
     :width 5px
-    :text-transform uppercase
     :text-indent .3em
-  .with_mark   
-    :background  url(../images/mark.jpg) no-repeat center
+    :background  url(../images/mark.jpg) no-repeat left
   .date
     :position absolute
     :font-family Courier, "Courier New", monospace
+    :text-transform uppercase
     :font-size 12px
     :top 0px
+    :padding-top 4px
+    :width 1px
+    :display block
+    
