--- a/app/views/task_lists/index.haml
+++ b/app/views/task_lists/index.haml
@@ -1,8 +1,9 @@
+-content_for :banner do
+  .gantt
+    = @chart.to_html(1, 32, 30, 0)
+
 -content_for :column do
   = task_list_column(@current_project,@task_lists,@sub_action,@task_list)
-
-.gantt
-  = @chart.to_html(1, 22, 30, 0)
 
 - unless @task_lists.empty?
   =main_task_list(@current_project,@task_lists,@sub_action)
