--- a/public/stylesheets/sass/tasks/index.sass
+++ b/public/stylesheets/sass/tasks/index.sass
@@ -1,3 +1,7 @@
+.index_task_lists
+  .banner
+    :background rgb(250,250,250)
+    :border-bottom solid 1px rgb(200,200,200)
 table.task_list
   :width 100%
   :margin-bottom 10px
