Adding 'show more activities' button. Optimized the way activities are retrieved from the database.

--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -12,5 +12,6 @@
   %h2= t('.title')
   #activities
     = list_activities(@activities)
+    = show_more_button(@activities)
 - else
-  =project_primer
+  = project_primer
