--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -96,6 +96,7 @@
     :margin-top 15px
     :font-size 12px
     .project_link
+      :margin 1px 0 2px 0
       .unread_comment_count
         :float right
         :font-weight normal
