--- a/public/stylesheets/sass/textilized.sass
+++ b/public/stylesheets/sass/textilized.sass
@@ -20,7 +20,7 @@
     :-moz-background-clip border
     :-moz-background-inline-policy continuous
     :-moz-background-origin padding
-    :background #F9F9F9 none repeat scroll 0 0
+    :background rgb(250,250,220) none repeat scroll 0 0
     :border-color #CCCCCC
     :border-style solid
     :border-width 1px 0
