--- a/public/stylesheets/sass/tasks/header.sass
+++ b/public/stylesheets/sass/tasks/header.sass
@@ -11,6 +11,7 @@
       :bottom 3px
 .task_header
   span.due_on
+    :display block
     :color rgb(160,160,160)
     :margin-right 10px
   span.overdue
