Accepting incoming email or not is now an option. If its enabled, it will enable reply to notices and addresses. Added outgoing emails for conversations, tasks and task lists. Added i18n for task status.

--- a/app/views/comments/_comment_count.haml
+++ b/app/views/comments/_comment_count.haml
@@ -1,1 +1,1 @@
-%span{ :id => id, :class => 'comments_count' }= status_type == :column ? target.comments_count : count = pluralize(target.comments_count,'Comment')
+%span{ :id => id, :class => 'comments_count' }= status_type == :column ? target.comments_count : count = t('common.comment', :count => target.comments_count)
