--- a/app/views/tasks/_td_task.haml
+++ b/app/views/tasks/_td_task.haml
@@ -5,8 +5,8 @@
     = link_to task.name, project_task_list_task_path(project,task_list,task)
     - unless (task.due_on.nil? && task.unassigned?) || task.closed?
       %span.assigned
-        - unless task.due_on.nil?
-          = task.overdue? ? t('tasks.overdue', :days => task.overdue) : task.due_on.strftime('%b %d')
-        -unless sub_action == 'mine'
+        - if task.due_on
+          = due_on(task)
+        - unless sub_action == 'mine'
           = "-" unless task.assigned.nil? || task.due_on.nil?
           = link_to task.assigned.name, user_path(task.assigned) unless task.assigned.nil?
